[tool.poetry]
name = "finalai"
version = "0.1.0"
description = ""
authors = ["FQA <otavioalmeida650@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
